# dfinity-take-home-problem

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml  requirements.txt
dfinity_take_home_problem/: dfinity_take_home_problem.py  tree_node.py
tests/: test_dfinity_take_home_problem.py  test_dfs.py  test_next_leaf.py  test_tree_node.py  test_utils.py
